wp-content/themes/portfolio_nagaya/assets/css/style.css
@charset "UTF-8";

/*----------------------------------------*/
/* global */
/*----------------------------------------*/
body {
  background-color: #ece8ef;
  ;
  color: #333333;
}

ul {
  margin: 0;
  padding: 0;
}

li {
  list-style: none;
}

a {
  color: inherit;
  text-decoration: none;
}

h1, h2, h3 {
  margin: 0;
}

h3 {
  font-size: 24px;
}

p {
  margin: 0;
}

dd {
  margin: 0;
}

.single {
  padding: 50px 0 100px;
}

main{animation: fadeIn 2s ease 0s 1 normal;}
  @keyframes fadeIn { from {
    opacity: 0.7;
  }
  to {
    opacity: 1;
  }
}

section {
  padding: 150px 0;
}

/* wrapper */
.wrapper {
  margin: 0 auto;
  text-align: center;
}

/* btn */
.btn {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 18px;
  cursor: pointer;
  border-radius: 9999px;
  line-height: 50px;
  background-color: #08b2e3;
  color: #ffffff;
  margin: 0 auto;
  max-width: 250px;
}

.btn:hover {
  opacity: 0.8;
}

/* humburger */
.toggleBtn {
  display: none;
  position: fixed;
  top: 15px;
  right: 30px;
  width: 30px;
  height: 30px;
  transition: all 0.5s;
  cursor: pointer;
  z-index: 3;
}

.toggleBtn span {
  display: block;
  position: absolute;
  left: 0;
  width: 30px;
  height: 2px;
  background-color: #333333;
  border-radius: 4px;
  transition: all 0.5s;
}

.toggleBtn span:nth-child(1) {
  top: 4px;
}

.toggleBtn span:nth-child(2) {
  top: 14px;
}

.toggleBtn span:nth-child(3) {
  bottom: 4px;
}

.toggleBtn.open span:nth-child(1) {
  -webkit-transform: translateY(10px) rotate(-315deg);
  transform: translateY(10px) rotate(-315deg);
}

.toggleBtn.open span:nth-child(2) {
  opacity: 0;
}

.toggleBtn.open span:nth-child(3) {
  -webkit-transform: translateY(-10px) rotate(315deg);
  transform: translateY(-10px) rotate(315deg);
}

.mask {
  display: none;
  transition: all 0.5s;
}

.mask.active {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #000;
  opacity: 0.8;
  z-index: 2;
  cursor: pointer;
}

/* cards */
.cards {
  display: flex;
  flex-wrap: wrap;
  margin-top: 60px;
}

.card .work {
  border-radius: 2px;
  background-size: cover;
  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.25);
}

.card img {
  width: 100%;
  height: auto;
}

.card {
  transition-duration: 0.3s;
}

.card:hover{
  transform: scale(1.2);
  transition-duration: 0.3s;
}

/* pager */
.pagerWrap {
  margin-top: 60px;
}

.pagerWrap .pageNav {
  display: flex;
  justify-content: center;
  margin: 0 auto;
}

.pagerWrap .pageNav li+li {
  margin-left: 10px;
}

.pagerWrap .pageNav a {
  display: flex;
  justify-content: center;
  line-height: 22px;
  max-height: 22px;
  color: #333333;
}

.pagerWrap .pageNav .index a {
  align-items: center;
  background-color: #333333;
  color: #ffffff;
  width: 22px;
  font-size: 12px;
}

.pagerWrap .pageNav .index.current a {
  background-color: #ffffff;
  color: #333333;
  border: solid 1px #333333;
}

/*----------------------------------------*/
/* header */
/*----------------------------------------*/
header {
  background-color: #ffffff;
  opacity: 0.8;
  height: 60px;
  position: sticky;
  top: 0;
  z-index: 999;
  width: 100%;
  border-bottom: 1px solid #ffffff;
}

header .headerWrapper {
  height: 60px;
  margin: 0 auto;
}

header .navList {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 600px;
  height: 60px;
  margin: 0 auto;
}

header .navItem {
  transition: 0.5s;
}

header .navItem:hover {
  color: #08b2e3;
}

/*----------------------------------------*/
/* firstView */
/*----------------------------------------*/
.firstView {
  height: 750px;
  background-image: url(./../image/IMG_9586.jpg);
  background-size: cover;
  background-position: center;
  box-shadow: 0px -10px 10px 0px #ece8ef inset;
}

.firstView .firstViewWrapper {
  margin: 0 auto;
  height: 750px;
  text-align: center;
}

.firstView .introduction {
  padding-top: 250px;
}

.firstView .myName {
  font: 60px 'Oswald', sans-serif;
  color: #ffffff;
  text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
  0px -5px 16px rgba(255,255,255,0.3);
}

.firstView .portfolio {
  font-size: 24px;
  color: #ffffff;
  margin-top: 20px;
}

/*----------------------------------------*/
/* overview */
/*----------------------------------------*/
.overview {
  padding-top: 150px;
  overflow: hidden;
}

.overview .wrapper {
  max-width: 600px;
  opacity: 0;
	transform: translate(-200px, 0);
	transition: all 1s ease-out;
}

.overview .wrapper.slideIn {
  opacity: 1;
  transform: translate(0, 0);
}

.overview .text {
  margin-top: 50px;
}

.overview .text p + p {
  margin-top: 20px;
}

/*----------------------------------------*/
/* works */
/*----------------------------------------*/
.works .wrapper {
  opacity: 0;
	transform: translate(200px, 0);
	transition: all 1s ease-out;
}

.works .wrapper.slideIn {
  opacity: 1;
  transform: translate(0, 0);
}

main .explanation {
  margin-top: 40px;
}

.works .cards {
  justify-content: space-around;
}

.works .card .text {
  margin-top: 30px;
}

.works .btn {
  margin-top: 90px;
}

/*----------------------------------------*/
/* worksList */
/*----------------------------------------*/
.worksList .cards {
  justify-content: space-between;
}

.worksList .card {
  width: 45%;
}

.worksList .card .text {
  margin-top: 30px;
}

.worksList .card:nth-child(n+3) {
  margin-top: 50px;
}

.worksList .wrapper {
  padding: 0;
}

/*----------------------------------------*/
/* worksSngle */
/*----------------------------------------*/
.worksSingle img {
  width: 100%;
  height: auto;
}

.worksSingle .wrapper {
  padding: 0;
}

.worksSingle .thumbnail {
  margin-top: 50px;
}

.worksSingle .mainText {
  margin-top: 50px;
}

.worksSingle .text {
  margin-top: 30px;
}

/*----------------------------------------*/
/* profile */
/*----------------------------------------*/
.profile .wrapper {
  padding: 50px 0;
}

.profile .profileItems {
  display: flex;
  flex-wrap: wrap;
  margin-top: 50px;
}
/* ... */

